# python-optimus

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASE.md  build.py  pyproject.toml  setup.py  tox.ini
.github/release-check-action/: config.py
.github/workflows/: release-check.yml  release.yml  test.yml
optimus_id/: __init__.py  optimus.pyx
optimus_ids/: __init__.py
tests/: test-optimus.py  test_optimus.py
