[tool.poetry]
name = "optimus-id"
version = "0.1.0"
description = "Transform internal id's to obfuscated integers using Knuth's integer hash"
authors = ["Abdullah Diab <mpcabd@gmail.com>, gazorby <gazorby@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
